RESOLVED FIXED137522
[EFL] REGRESSION(r173929): It broke the Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=137522
Summary [EFL] REGRESSION(r173929): It broke the Web Inspector
Csaba Osztrogonác
Reported 2014-10-08 07:32:08 PDT
After http://trac.webkit.org/changeset/173929 web inspector doesn't work at all in MiniBrowser of EFL. how to reproduce: - start MiniBrowser google.com - right click on anything - click on inspect element - nothing happens
Attachments
WIP (1.27 KB, patch)
2014-10-12 22:26 PDT, Gyuyoung Kim
no flags
WIP (2.12 KB, patch)
2014-10-13 00:54 PDT, Gyuyoung Kim
no flags
Patch (1.76 KB, patch)
2014-10-15 01:13 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-10-11 07:47:01 PDT
It looks there are two problems on that. One is the "Inspector Element" of context menu doesn't call inspector root function. The other is inspector window isn't shown even when "ctrl + i" shortcut is pressed. Two problems should be fixed.
Gyuyoung Kim
Comment 2 2014-10-12 22:26:09 PDT
Gyuyoung Kim
Comment 3 2014-10-12 22:28:34 PDT
I think EFL port needs to implement platformAttach(), platformDetach() and so on in WebInspectorProxyEfl.cpp because r173929 made the WebInspector run on separate web process.
Gyuyoung Kim
Comment 4 2014-10-13 00:54:20 PDT
Csaba Osztrogonác
Comment 5 2014-10-13 01:37:40 PDT
just a note: I assume the bug137340 ( DFG-JIT / GC bug ) makes EFL inspector crash too. But you can test the inspector with disabling DFG JIT with JSC_useDFGJIT=0 environment variable.
Gyuyoung Kim
Comment 6 2014-10-15 01:13:23 PDT
Gyuyoung Kim
Comment 7 2014-10-15 22:09:49 PDT
Ossy, I think EFL inspector should support docking functionality for inspector window. It looks it may need to spend time for implementing it. So, I wonder whether we can show inspector on new window as before.
Csaba Osztrogonác
Comment 8 2014-10-17 02:09:16 PDT
Comment on attachment 239856 [details] Patch LGTM, r=me. This workaround is reasonable until we can add supporting docking.
WebKit Commit Bot
Comment 9 2014-10-17 03:51:13 PDT
Comment on attachment 239856 [details] Patch Clearing flags on attachment: 239856 Committed r174820: <http://trac.webkit.org/changeset/174820>
WebKit Commit Bot
Comment 10 2014-10-17 03:51:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.