[EFL] REGRESSION(r173929): It broke the Web Inspector https://bugs.webkit.org/show_bug.cgi?id=137522

Reviewed by Csaba Osztrogonác.

r173929 let web inspector use a separate web process. Besides it changed that the inspector is shown
as docking mode by default. However EFL port doesn't support to show web inspector as docking window yet.
This patch is to show web inspector on EFL new window as before. Docking mode should be implemented by
upcoming patch.

* UIProcess/efl/WebInspectorProxyEfl.cpp:
(WebKit::WebInspectorProxy::platformAttach):


Canonical link: https://commits.webkit.org/155678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174820 268f45cc-cd09-0410-ab3c-d52691b4dbfc